# healthflow

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
MIEMBRO 4 capa gold y metricas/: miembro 4_report.md  métricas.ipynb
business questions and QA/: README.md  gold_financial_analytics.md  gold_medical_performance.md  qa_report.md
data/raw/: appointment_treatments.csv  billing.csv  clinics.csv  doctors.csv  patients.csv  treatments_catalog.csv
docs/: 00_RESUMEN_CAMBIOS.md  01_Exploracion_y_Staging.md  02_Normalizacion_3NF.md  05_Auditoria_Final.md  consultas_negocio.sql
miembro 4/: metrics.py
models/gold/: gold_financial_analytics.sql  gold_medical_performance.sql  ingresos_por_clinica_y_mes.sql  schema.yml
models/marts/: dim_appointments.sql  dim_clinic.sql  dim_date.sql  dim_doctor.sql  dim_patient.sql  dim_treatment.sql  fact_appointment_treatments.sql  fact_billing.sql  marts_report.md  schema.yml
models/staging/: schema.yml  sources.yml  stg_appointment_treatments.sql  stg_appointments.sql  stg_billing.sql  stg_clinics.sql  stg_doctors.sql  stg_patients.sql  stg_treatments_catalog.sql
scripts/: load_raw.py  metrics_final.py
